--- a/.github/workflows/1-lint.yml
+++ b/.github/workflows/1-lint.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,14 +18,16 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache: true  # Habilitar cache para dependências
 
       - name: Install golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
           version: v2.1
+          args: --timeout=5m  # Mover timeout para args
 
       - name: Lint
-        run: golangci-lint run --timeout 5m
+        run: golangci-lint run
 
       - name: Check gofmt
         run: |
@@ -36,5 +38,6 @@ jobs:
             exit 1
           fi
 
-      # - name: Run unit tests
-      #  run: go test ./...
+      - name: Run unit tests
+        run: go test ./... -v
+  
