--- a/.github/workflows/2-version.yml
+++ b/.github/workflows/2-version.yml
@@ -8,15 +8,20 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  id-token: write  # Necessário para algumas configurações de segurança
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - name: Release Please
         id: release
         uses: googleapis/release-please-action@v4
         with:
           release-type: go
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          package-name: chatcli
+          token: ${{ secrets.GITHUB_TOKEN }}
+          command: release-pr
