--- a/.github/workflows/2-release-process.yml
+++ b/.github/workflows/2-release-process.yml
@@ -17,11 +17,38 @@ permissions:
   id-token: write
 
 jobs:
-  release-please:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      release_created: ${{ steps.release.outputs.release_created }}
-      tag_name: ${{ steps.release.outputs.tag_name }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Para garantir que o histórico completo esteja disponível
+
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: '1.23'
+          cache: true
+
+      - name: Build binaries
+        run: |
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
+          VERSION=$(git describe --tags --abbrev=0)
+          LDFLAGS="-X 'github.com/diillson/chatcli/version.Version=${VERSION}' -X 'github.com/diillson/chatcli/version.CommitHash=${COMMIT_HASH}' -X 'github.com/diillson/chatcli/version.BuildDate=${BUILD_DATE}'"
+          
+          # Build para várias plataformas
+          GOOS=linux GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-linux-amd64 ./main.go
+          GOOS=darwin GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-darwin-amd64 ./main.go
+          GOOS=darwin GOARCH=arm64 go build -ldflags="${LDFLAGS}" -o chatcli-darwin-arm64 ./main.go
+          GOOS=windows GOARCH=amd64 go build -ldflags="${LDFLAGS}" -o chatcli-windows-amd64.exe ./main.go
+          
+          # Verifica a versão do binário
+          ./chatcli-linux-amd64 --version
+  release-please-release:
+    runs-on: ubuntu-latest
+    needs: [build]
     steps:
       - name: Release Please
         id: release
@@ -30,12 +57,37 @@ jobs:
           skip-github-pull-request: true
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
-
-  build-and-release:
-    needs: release-please
-    if: ${{ needs.release-please.outputs.release_created == 'true' }}
+      - uses: actions/checkout@v4
+      - name: tag major and minor versions
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN}}@github.com/diillson/chatcli.git"
+          git tag -d v${{ steps.release.outputs.major }} || true
+          git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git push origin :v${{ steps.release.outputs.major }} || true
+          git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
+          git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
+          git push origin v${{ steps.release.outputs.major }}
+          git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+        if: ${{ steps.release.outputs.release_created }}
+  release-please-pr:
+    needs:
+      - build
+      - release-please-release
     runs-on: ubuntu-latest
+    outputs:
+      tag_name: ${{ steps.release-pr.outputs.tag_name }}
     steps:
+      - id: release-pr
+        name: Release Please PR
+        uses: googleapis/release-please-action@v4
+        with:
+          release-type: go
+          token: ${{ secrets.GH_RELEASE_TOKEN }}
+          fork: false
+          skip-github-release: true
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -67,7 +119,7 @@ jobs:
       - name: Update Release with Binaries
         uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{ needs.release-please.outputs.tag_name }}
+          tag_name: ${{ needs.release-pr.outputs.tag_name }}
           files: |
             chatcli-linux-amd64
             chatcli-darwin-amd64
