--- a/.github/workflows/2-release-process.yml
+++ b/.github/workflows/2-release-process.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
           BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
-          VERSION=$(git describe --tags --abbrev=0)
+          VERSION=$(git describe --tags --always --dirty 2>/dev/null || echo "dev")
           LDFLAGS="-X 'github.com/diillson/chatcli/version.Version=${VERSION}' -X 'github.com/diillson/chatcli/version.CommitHash=${COMMIT_HASH}' -X 'github.com/diillson/chatcli/version.BuildDate=${BUILD_DATE}'"
           
           # Build para várias plataformas
@@ -103,6 +103,7 @@ jobs:
           cache: true
 
       - name: Build binaries
+        if: ${{ steps.release-please-release.outputs.release_created }}
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
           BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
