fix: corrigir referências e fluxo do workflow de release
Este commit resolve problemas de referência entre jobs e steps no workflow de automação de release, especificamente:

- Simplifica a estrutura do workflow jobs claros e bem definidos
- Corrige referências incorretas a steps.release-please-release.outputs
- Substitui outputs incorretos do job release-please-pr por necessidade real
- Adiciona etapa de debug para diagnóstico dos valores de output
- Atualiza namespace da action para google-github-actions/release-please-action
- Implementa condicionais corretas para criação de releases baseadas em tags

A estrutura revisada melhora a legibilidade e robustez do workflow, garantindo
que as condições sejam verificadas corretamente e que os artefatos sejam
anexados ao release criado pelo próprio release-please-action.

Este fix resolve o erro "Error: ⚠️ GitHub Releases requires a tag"
que ocorria devido à referência incorreta entre steps e jobs.

--- a/.github/workflows/2-release-process.yml
+++ b/.github/workflows/2-release-process.yml
@@ -91,7 +91,7 @@ jobs:
           skip-github-release: true
       - name: Checkout code
         uses: actions/checkout@v4
-        if: ${{ steps.release-please-release.outputs.release_created }}
+        if: ${{ needs.release-please-release.outputs.release_created }}
         with:
           fetch-depth: 0
           ref: ${{ needs.release-please-release.outputs.tag_name }}
@@ -103,7 +103,7 @@ jobs:
           cache: true
 
       - name: Build binaries
-        if: ${{ steps.release-please-release.outputs.release_created }}
+        if: ${{ needs.release-please-release.outputs.release_created }}
         run: |
           COMMIT_HASH=$(git rev-parse --short HEAD)
           BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
@@ -123,7 +123,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: ${{ needs.release-please-release.outputs.tag_name }}
         with:
-          tag_name: ${{ needs.release-pr.outputs.tag_name }}
+          tag_name: ${{ needs.release-please-release.outputs.tag_name }}
           files: |
             chatcli-linux-amd64
             chatcli-darwin-amd64
