--- a/.github/workflows/4-sync-main-to-develop.yml
+++ b/.github/workflows/4-sync-main-to-develop.yml
@@ -8,27 +8,26 @@ on:
 
 permissions:
   contents: write
-  pull-requests: write
-  id-token: write
 
 jobs:
   sync:
-    if: github.event.pull_request.merged == true && startsWith(github.event.pull_request.head.ref, 'release-please--branches--main')
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          token: ${{ secrets.GH_RELEASE_TOKEN }}
           fetch-depth: 0
 
       - name: Configura usuário git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN}}@github.com/diillson/chatcli.git"
 
       - name: Merge main into develop
         run: |
           git checkout develop
-          git merge main --no-ff --no-edit
+          git pull origin develop
+          git merge main --no-ff --no-edit -m "chore: merge main back into develop after release"
           git push origin develop
