--- a/.github/workflows/2-create-release-pr.yml
+++ b/.github/workflows/2-create-release-pr.yml
@@ -8,7 +8,6 @@ on:
 permissions:
   contents: write
   pull-requests: write
-  issues: write
 
 jobs:
   release-please:
@@ -18,7 +17,12 @@ jobs:
         uses: googleapis/release-please-action@v4
         with:
           target-branch: main
+          default-branch: develop
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
-          config-file: release-please-config.json
-          manifest-file: .release-please-manifest.json
+          # Criar apenas PR, não release
+          skip-github-release: true
+          # Configurações adicionais recomendadas
+          bump-minor-pre-major: true
+          bump-patch-for-minor-pre-major: true
+          include-v-in-tag: true
