--- a/.github/workflows/2b-create-release.yml
+++ b/.github/workflows/2b-create-release.yml
@@ -34,6 +34,7 @@ jobs:
         uses: googleapis/release-please-action@v4
         with:
           target-branch: main
+          default-branch: develop
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
           skip-github-pull-request: true
