fix: test release please workflow

--- a/.github/workflows/2-create-release-pr.yml
+++ b/.github/workflows/2-create-release-pr.yml
@@ -16,8 +16,7 @@ jobs:
       - name: Release Please
         uses: googleapis/release-please-action@v4
         with:
-          target-branch: main
-          default-branch: develop
+          target-branch: ${{ github.ref_name }}
           release-type: go
           token: ${{ secrets.GH_RELEASE_TOKEN }}
           # Criar apenas PR, não release
