--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -1,15 +1,18 @@
-name: Go Lint & Test
+name: CI (Lint, Fmt, Test)
 
 on:
+  pull_request:
+    branches: ["develop"]
   push:
     branches: ["develop"]
-  pull_request:
-    branches: ["main"]
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
-    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -18,16 +21,13 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-          cache: true  # Habilitar cache para dependências
+          cache: true
 
-      - name: Install golangci-lint
-        uses: golangci/golangci-lint-action@v8
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v6
         with:
-          version: v2.1
-          args: --timeout=5m  # Mover timeout para args
-
-      - name: Lint
-        run: golangci-lint run
+          version: latest
+          args: --timeout=5m
 
       - name: Check gofmt
         run: |
@@ -38,6 +38,8 @@ jobs:
             exit 1
           fi
 
+      - name: Go vet
+        run: go vet ./...
+
       - name: Run unit tests
-        run: go test ./... -v
-  
+        run: go test -race -coverprofile=coverage.out ./... -v
