--- a/.github/workflows/2-release-process.yml
+++ b/.github/workflows/2-release-process.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           release-type: go
           skip-github-pull-request: true
-          token: ${{ secrets.GH_RELEASE_TOKEN || github.token }}
+          token: ${{ secrets.GH_RELEASE_TOKEN }}
 
   build-and-upload-assets:
     name: Build and upload binaries to release
@@ -76,7 +76,7 @@ jobs:
           prerelease: false
           generate_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN || github.token }}
+          GITHUB_TOKEN: ${{ secrets.GH_RELEASE_TOKEN }}
 
   open-pr-develop-to-main:
     name: Open PR develop -> main
@@ -92,20 +92,19 @@ jobs:
       - name: Open or reuse PR develop -> main
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_RELEASE_TOKEN || github.token }}
+          github-token: ${{ secrets.GH_RELEASE_TOKEN }}
           script: |
             const owner = context.repo.owner;
             const repo = context.repo.repo;
             const head = `${owner}:develop`;
             const base = 'main';
             
-            // Verifica se já existe PR aberto develop -> main
             const { data: prs } = await github.rest.pulls.list({
-              owner, repo, state: 'open', head, base, per_page: 1
+              owner, repo, state: 'open', head, base, per_page: 10
             });
             
             if (prs.length > 0) {
-              core.info(`PR já existe: #${prs[0].number}`);
+              core.info(`PR já existe: ${prs[0].number}`);
               return;
             }
             
@@ -116,6 +115,6 @@ jobs:
               owner, repo, head: 'develop', base, title, body
             });
             
-            core.info(`PR criado: #${pr.number}`);
+            core.info(`PR criado: ${pr.number}`);
           env:
             TAG_NAME: ${{ needs.release-please.outputs.tag_name }}
