--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -1,8 +1,8 @@
 name: CI (Lint, Fmt, Test)
 
 on:
-  pull_request:
-    branches: [develop, main]
+#  pull_request:
+#    branches: [develop, main]
   push:
     branches: [develop]
 
