--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -1,10 +1,10 @@
 name: CI (Lint, Fmt, Test)
 
 on:
-#  pull_request:
-#    branches: [develop, main]
-  push:
+  pull_request:
     branches: [develop]
+#  push:
+#    branches: [develop]
 
 concurrency:
   group: ci-${{ github.ref }}
