--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -2,7 +2,7 @@ name: CI (Lint, Fmt, Test)
 
 on:
   pull_request:
-    branches: [develop]
+    branches: [develop, main]
 #  push:
 #    branches: [develop]
 
