ci(workflows): set `production` environment for release PR job in GitHub Actions

--- a/.github/workflows/3-release-pr-on-main.yml
+++ b/.github/workflows/3-release-pr-on-main.yml
@@ -34,6 +34,7 @@ jobs:
     needs: [release_please]
     if: needs.release_please.outputs.release_created == 'true'
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - name: Checkout tag
         uses: actions/checkout@v4
