feat(llm): integrate xAI provider with support for Grok models
- Added xAI as a supported LLM provider with integration for Grok models (`grok-4`, `grok-3`, `grok-3-mini`, `grok-code-fast-1`).
- Implemented new `XAIClient` for API interaction and added client configuration in `LLMManager`.
- Updated CLI to handle `XAI` provider and model selection.
- Enhanced catalog to include metadata for xAI Grok models.
- Provided test coverage for `XAIClient`.

--- a/.github/workflows/2-open-pr-develop-to-main.yml
+++ b/.github/workflows/2-open-pr-develop-to-main.yml
@@ -64,7 +64,7 @@ jobs:
           
           # 2. Criar um prompt detalhado para a IA
           PROMPT=$(cat <<EOF
-          Sua única tarefa é gerar um título e um corpo para um Pull Request, mesclando 'develop' em 'main'. O projeto usa squash merge.
+          Sua única tarefa é em inglês, gerar um título e um corpo para um Pull Request, mesclando 'develop' em 'main'. O projeto usa squash merge.
       
           Sua resposta DEVE SEGUIR ESTRITAMENTE O SEGUINTE FORMATO, sem nenhuma palavra ou texto adicional antes ou depois:
       
