fix(workflows): update CI, release, and PR automation workflows
- Added `.github/workflows/2-prepare-release-pr.yml` to automate Pull Request creation from `develop` to `main`.
- Updated CI workflow to include artifact uploads and post-coverage comments.
- Introduced `.github/workflows/3-publish-release.yml` to streamline releases and asset uploads on pushes to `main`.
- Implemented `sync_main_to_develop` step to cherry-pick release commits back to `develop`.
- Refined Agent Mode logic to better handle screen redraws.

--- a/.github/bkp/1-ci.yml
+++ b/.github/bkp/1-ci.yml
@@ -3,15 +3,16 @@ name: CI (Lint, Fmt, Test)
 on:
   pull_request:
     branches: [develop, main]
+#  push:
+#    branches: [develop]
 
 concurrency:
-  group: ci-${{ github.head_ref }}
+  group: ci-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   lint-and-test:
     runs-on: ubuntu-latest
-    if: github.actor != 'release-please[bot]' && github.actor != 'github-actions[bot]'
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -42,14 +43,3 @@ jobs:
 
       - name: Run unit tests
         run: go test -race -coverprofile=coverage.out ./... -v
-
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage.out
-
-      - name: Post coverage comment
-        uses: Misha-K/go-coverage-comment@main
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
