--- a/.github/workflows/1-ci.yml
+++ b/.github/workflows/1-ci.yml
@@ -49,7 +49,7 @@ jobs:
           name: coverage-report
           path: coverage.out
 
-      - name: Post coverage comment
-        uses: Misha-K/go-coverage-comment@main
+      - name: Post coverage report as a PR comment
+        uses: robvanderleek/post-go-test-coverage-to-pr@v1
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
